# altfighter

./: .gitignore  .local.env  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yml  heroku.yml  requirements.txt
altfighter/: asgi.py  celery.py  (+3 more)
backend/: conftest.py  manage.py  pyproject.toml  requirements.txt
backend/altfighter/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/character/: admin.py  factories.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/character/migrations/: 0001_initial.py  0002_alter_character_nickname.py
backend/character/tests/: __init__.py  character_tests.py  factories.py  fight_tests.py  mission_tests.py  shop_tests.py
backend/common/: models.py
backend/compose/local/django/: Dockerfile  Dockerfile.prod  start
backend/compose/local/django/celery/beat/: start
backend/compose/local/django/celery/flower/: start
backend/compose/local/django/celery/worker/: start
backend/frontend/: package-lock.json
backend/frontend/components/: mission.js
backend/frontend/pages/: _app.js
backend/item/: factories.py  models.py  serializers.py  urls.py  views.py
backend/item/migrations/: 0001_initial.py  0002_alter_item_name.py
backend/item/tests/: __init__.py  item_tests.py
backend/project/: celery.py  urls.py
backend/project/settings/: __init__.py  authentication.py  base.py  celery.py  database.py  email.py  rest_framework.py  static_files.py
backend/users/: factories.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
(+57 files in other folders)
