[tool.poetry]
name = "altfighter"
version = "0.1.0"
description = ""
authors = ["blaku01 <gabrielblaczek@gmail.com>"]
license = "All Rights Reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
djangorestframework = "^3.14.0"
celery = {extras = ["redis"], version = "^5.3.4"}
markdown = "^3.5"
django-filter = "^23.3"
django-celery-beat = "^2.5.0"
django-annoying = "^0.10.6"
django-cors-headers = "^4.3.0"
drf-yasg = "^1.21.7"
factory-boy = "^3.3.0"
django-allauth = "^0.57.0"
dj-rest-auth = "^5.0.1"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
psycopg2 = "^2.9.9"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
